--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.13.0",
+        "@emotion/styled": "^11.13.0",
+        "@fontsource/roboto": "^5.0.13",
+        "@mui/material": "^5.16.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
@@ -16,6 +20,9 @@
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.19",
+        "postcss": "^8.4.40",
+        "tailwindcss": "^3.4.7",
         "vite": "^5.0.8"
     }
 }
